tests/cases/smoke/invalid/matrix_bare_method.ty
var bad = Matrix([1, 2]).sum
